--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 import '../styles/navbar.css';
 import { getCollection } from 'astro:content';
 
@@ -9,7 +10,8 @@ const projects = await getCollection('projects');
 <nav class="navbar">
   <div class="nav-left">
     <a href="/" class="nav-link">Home</a>
-    <a href="/about" class="nav-link">About</a>
+    <a href="/about"  class="nav-link">About</a>
+    <a href="/src/content/cv.md" download target="_blank" class="nav-link">Resume</a>
     <div class="dropdown">
       <button class="dropdown-btn">Projects</button>
       <div class="dropdown-content">
@@ -20,10 +22,10 @@ const projects = await getCollection('projects');
     </div>
   </div>
   <div class="nav-right">
-    <a href="https://linkedin.com/in/yourprofile" class="social-icon">
+    <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="social-icon">
       <span class="icon">LinkedIn</span>
     </a>
-    <a href="/contact" class="social-icon">
+    <a href="mailto:hello@andreapesci.com" class="social-icon">
       <span class="icon">Contact</span>
     </a>
   </div>
