--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { ClientRouter } from 'astro:transitions';
 import '../styles/global.css';
 import Navbar from '../components/Navbar.astro';
 
@@ -16,7 +17,9 @@ const { title, description } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
-    <title>{title}</title>
+    <ClientRouter fallback="swap" />
+    <title>{title || "Andrea's Portfolio"}</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body>
     <Navbar />
