--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,7 +11,6 @@ const projects = await getCollection('projects');
   <div class="nav-left">
     <a href="/" class="nav-link">Home</a>
     <a href="/about"  class="nav-link">About</a>
-    <a href="/src/content/cv.md" download target="_blank" class="nav-link">Resume</a>
     <div class="dropdown">
       <button class="dropdown-btn">Projects</button>
       <div class="dropdown-content">
@@ -22,11 +21,12 @@ const projects = await getCollection('projects');
     </div>
   </div>
   <div class="nav-right">
-    <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="social-icon">
-      <span class="icon">LinkedIn</span>
+    <a href="/src/content/cv.md" download target="_blank" class="nav-link">Resume</a>
+    <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="nav-link">
+      LinkedIn
     </a>
-    <a href="mailto:hello@andreapesci.com" class="social-icon">
-      <span class="icon">Contact</span>
+    <a href="mailto:hello@andreapesci.com" class="nav-link">
+      Mail Me!
     </a>
   </div>
 </nav>
