--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,23 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/home.css";
 import { getCollection } from "astro:content";
 
-// Carica tutti i progetti dalla collection
 const projects = await getCollection("projects");
+const aboutData = await getCollection("about");
+const about = aboutData[0];
+
 ---
 
 <BaseLayout
-    title="Il Mio Portfolio"
-    description="Portfolio professionale con progetti e competenze"
+    title={about.data.title}
+    description={about.data.shortBio}
 >
     <div class="hero">
-        <h1>Benvenuto nel mio Portfolio</h1>
-        <p>Esplora i miei progetti</p>
+        <h1 style="text-transform:uppercase">{about.data.heroText}</h1>
+        <h2 style="text-transform:uppercase">{about.data.subtitle}</h2>
+        <p>{about.data.intro}</p>
+        <p>If you want to know more about me,
+            <a href="/about">click here...</a>
+        </p>
     </div>
     <div class="project-featured">
         {
