changes to home and navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,6 +20,7 @@ const projects = await getCollection('projects');
       </div>
     </div>
   </div>
+  <h1 class="navbar-title">ANDREA PESCI</h1>
   <div class="nav-right">
     <a href="/src/content/cv.md" download target="_blank" class="nav-link">Resume</a>
     <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" class="nav-link">
