--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,90 +2,93 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/home.css";
 import { getCollection } from "astro:content";
-
 const projects = await getCollection("projects");
 const aboutData = await getCollection("about");
 const about = aboutData[0];
-
 ---
-
 <BaseLayout
     title={about.data.title}
     description={about.data.shortBio}
 >
     <div class="hero">
-        <h1 style="text-transform:uppercase">{about.data.heroText}</h1>
-        <h2 style="text-transform:uppercase">{about.data.subtitle}</h2>
-        <p>{about.data.intro}</p>
-        <p>If you want to know more about me,
-            <a href="/about">click here...</a>
-        </p>
-    </div>
-    <div class="project-featured">
-        {
-            projects
-                .filter((project) => project.data.featured)
-                .map((project) => (
-                    <a href={`/${project.id}`} class="project-card">
-                        <div class="project-image-wrapper">
-                            <div class="project-title">
-                                <span
-                                    class="title-tag"
-                                    transition:name={`project-title-${project.id}`}
-                                    >
-                                        {project.data.title}
-                                    </span>
-                            </div>
-                            <img
-                                src={`/${project.id}/${project.data.image}`}
-                                alt={project.data.title}
-                                class="project-image"
-                                transition:name={`project-image-${project.id}`}
-                            />
-                            <div class="project-tags">
-                                {project.data.technologies.map((tag) => (
-                                    <span class="tag">{tag}</span>
-                                ))}
-                            </div>
-                        </div>
-                    </a>
-                ))
-        }
+        <p>{about.data.intro}<a href="/about">click here...</a></p>
+
+
     </div>
 
-    <div class="project-gallery">
-        {
-            projects
-                .filter((project) => !project.data.featured)
-                .map((project) => (
-                    <a href={`/${project.id}`} class="project-card">
-                        <div class="project-image-wrapper">
-                            <div class="project-title">
-                                <span
-                                    class="title-tag"
-                                    transition:name={`project-title-${project.id}`}>
-                                        {project.data.title}
-                                    </span>
-                            </div>
-                            <img
-                                src={`/${project.id}/${project.data.image}`}
-                                alt={project.data.title}
-                                class="project-image"
-                                transition:name={`project-image-${project.id}`}
-                            />
-                            <div class="project-tags">
-                                {project.data.technologies.map((tag) => (
-                                    <span class="tag">{tag}</span>
-                                ))}
-                            </div>
-                        </div>
+    {projects.filter((project) => project.data.featured).length > 0 && (
+        <div class="projects-section">
+            <h2 class="section-title">Highlighted Projects</h2>
+            <div class="project-featured">
+                {
+                    projects
+                        .filter((project) => project.data.featured)
+                        .map((project) => (
+                            <a href={`/${project.id}`} class="project-card featured-card">
+                                <div class="project-image-wrapper featured-image-wrapper">
+                                    <div class="project-title">
+                                        <span
+                                            class="title-tag featured-title"
+                                            transition:name={`project-title-${project.id}`}
+                                            >
+                                                {project.data.title}
+                                            </span>
+                                    </div>
+                                    <img
+                                        src={`/${project.id}/${project.data.image}`}
+                                        alt={project.data.title}
+                                        class="project-image"
+                                        transition:name={`project-image-${project.id}`}
+                                    />
+                                    <div class="project-tags">
+                                        {project.data.technologies.map((tag) => (
+                                            <span class="tag">{tag}</span>
+                                        ))}
+                                    </div>
+                                </div>
+                            </a>
+                        ))
+                }
+            </div>
+        </div>
+    )}
 
-                    </a>
-                ))
-        }
-    </div>
+    {projects.filter((project) => !project.data.featured).length > 0 && (
+        <div class="projects-section other-projects">
+            <h2 class="section-title">Other Projects</h2>
+            <div class="project-gallery">
+                {
+                    projects
+                        .filter((project) => !project.data.featured)
+                        .map((project) => (
+                            <a href={`/${project.id}`} class="project-card">
+                                <div class="project-image-wrapper">
+                                    <div class="project-title">
+                                        <span
+                                            class="title-tag"
+                                            transition:name={`project-title-${project.id}`}>
+                                                {project.data.title}
+                                            </span>
+                                    </div>
+                                    <img
+                                        src={`/${project.id}/${project.data.image}`}
+                                        alt={project.data.title}
+                                        class="project-image"
+                                        transition:name={`project-image-${project.id}`}
+                                    />
+                                    <div class="project-tags">
+                                        {project.data.technologies.map((tag) => (
+                                            <span class="tag">{tag}</span>
+                                        ))}
+                                    </div>
+                                </div>
+                            </a>
+                        ))
+                }
+            </div>
+        </div>
+    )}
 </BaseLayout>
-
 <style>
     @view-transition {
       navigation: auto; /* enabled! */
