--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -21,6 +21,7 @@
 .nav-link:hover {
     background-color: rgba(var(--background-normal-rgb), 1);
     color: var(--text-color);
+
 }
 /* Dropdown styles */
 .dropdown {
@@ -87,5 +88,11 @@
     to {
         opacity: 1;
         transform: translateY(0) translateX(-50%);
+    }
+}
+
+@media (max-width: 700px) {
+    .navbar-title {
+        display: none;
     }
 }
