--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -19,10 +19,16 @@
   .hero p {
     text-align: center;
     max-width: 50%;
-    color: rgba(var(--text-color-rgb), 0.7);
+    color: rgba(var(--text-color-rgb), 0.65);
+
   }
   .hero a {
-    color: rgba(var(--text-color-rgb), 0.85);
+    color: rgba(var(--text-color-rgb), 0.9);
+    text-decoration: none;
+  }
+  .hero a:hover {
+    color: rgba(var(--text-color-rgb), 1);
+    text-decoration:underline;
   }
 
   .projects-section {
@@ -31,7 +37,6 @@
 
   .section-title {
     text-align: center;
-    margin-bottom: 1.5rem;
     font-size: 1.75rem;
     font-weight: bold;
     position: relative;
@@ -47,15 +52,23 @@
   }
 
   .other-projects {
-
+    background-color: rgba(var(--background-lighter-rgb), 0.3);
     border-radius: 8px;
   }
+
+
 
   .project-gallery {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 2rem;
+    margin-top: 0.5rem;
+    padding: 1rem;
+  }
+  .project-gallery .project {
+    min-width: 20rem;
+    width: 25%;
   }
   .project-featured {
     display: flex;
@@ -72,35 +85,31 @@
     transition: transform 0.3s ease;
   }
 
-  /* Stile per le card in evidenza */
+
   .featured-card {
     width: 450px;
     max-width: 100%;
   }
 
   .project-card:hover {
-    transform: translateY(-1rem);
+    transform: translateY(-0.5rem);
   }
   .project-card h3 {
     padding: var(--default-spacing);
     text-align: center;
   }
   .project-image-wrapper {
+    aspect-ratio: 4/3;
     position: relative;
     width: 100%;
-    height: 13rem;
+    height: 14rem;
     overflow: hidden;
   }
 
-  /* Stile per i contenitori di immagini in evidenza */
   .featured-image-wrapper {
     height: 18rem;
   }
 
-  .project-image-wrapper:hover .project-tags {
-    opacity: 1;
-    transform: translateY(0);
-  }
   .project-image {
     width: 100%;
     height: 100%;
@@ -113,11 +122,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: rgba(var(--background-lighter-rgb), 0.75);
+    background: rgba(var(--background-lighter-rgb), 0.9);
     color: var(--text-color);
     text-align: center;
     padding: var(--default-spacing);
-    opacity: 0.8;
     z-index: 1;
   }
 
@@ -127,42 +135,64 @@
     background: none;
   }
 
-  /* Stile per i titoli delle card in evidenza */
   .featured-title {
     font-size: 1.1rem;
-    font-weight: 600;
+  }
+
+
+  .project {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
   }
 
   .project-tags {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    display: flex;
     color: var(--text-color);
     text-align: center;
-    padding: var(--default-spacing);
-    opacity: 0;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-    transform: translateY(100%);
-    display: flex;
-    justify-content: space-evenly;
-    overflow-y: auto;
+    padding: 0.5rem 0;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: flex-start;
+    gap: 0.5rem;
+    overflow: hidden;
   }
+
+
+
   .tag {
-    flex-wrap: nowrap;
-    display: inline-block;
-    font-size: 0.8rem;
-    background: rgba(var(--background-darker-rgb), 0.65);
-    box-shadow: var(--text-color) 0px 0px 2px;
-    padding: 0.1rem 0.375rem;
+    font-size: 0.55rem;
+    background: rgba(var(--background-lighter-rgb), 0.5);
+    padding: 0.15rem 0.35rem;
     border-radius: 5px;
+    text-transform: uppercase;
+  }
+
+  .project-brief-description {
+    font-size: 0.875rem;
+    color: rgba(var(--text-color-rgb), 0.65);
+  }
+
+  .skills-title {
+    font-size: 1rem;
+    color: rgba(var(--text-color-rgb), 0.8);
+  }
+
+  .skills-list {
+    list-style-type: disc;
+    padding-left: 2rem;
+    margin-top: -0.25rem;
+  }
+
+  .skills-item {
+    font-size: 0.875rem;
+    line-height: 1.2;
+    color: rgba(var(--text-color-rgb), 0.7);
     text-transform: uppercase;
   }
 
   @media (max-width: 787px) {
     .project-gallery {
-
         justify-content: space-evenly;
-
       }
 }
