--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -90,6 +90,9 @@
         transform: translateY(0) translateX(-50%);
     }
 }
+.navbar-title {
+    font-weight: bold;
+}
 
 @media (max-width: 700px) {
     .navbar-title {
